# srht-scuttle

./: .build.yml  .envrc  .gitignore  README.en.md  README.md  flake.nix  justfile
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/workflows/: repo-lockdown.yml
tree-sitter-structurizr-dsl/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-structurizr-dsl/bindings/c/: tree-sitter-structurizr_dsl.h  tree-sitter-structurizr_dsl.pc.in
tree-sitter-structurizr-dsl/bindings/go/: binding.go  binding_test.go
tree-sitter-structurizr-dsl/bindings/node/: binding.cc  index.js
tree-sitter-structurizr-dsl/bindings/python/tests/: test_binding.py
tree-sitter-structurizr-dsl/bindings/python/tree_sitter_structurizr_dsl/: __init__.py  binding.c
tree-sitter-structurizr-dsl/bindings/rust/: build.rs  lib.rs
tree-sitter-structurizr-dsl/bindings/swift/TreeSitterStructurizrDSLTests/: TreeSitterStructurizrDSLTests.swift
tree-sitter-structurizr-dsl/src/: grammar.json  node-types.json  parser.c
tree-sitter-structurizr-dsl/test/corpus/: comment.txt  comments.txt  root-level.txt  variables.txt  workspace.txt
