[package]
name = "tree-sitter-structurizr-dsl"
description = "Grammar for Structurizr DSL"
version = "0.1.0"
authors = ["Roger Steve Ruiz <hi@rog.gr>"]
license = "AGPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "structurizr-dsl"]
categories = ["parsing", "text-editors"]
repository = "https://git.sr.ht/~rogeruiz/scuttle"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
