[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-structurizr-dsl"
description = "Grammar for Structurizr DSL"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "structurizr-dsl"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Roger Steve Ruiz", email = "hi@rog.gr" }]
requires-python = ">=3.9"
license.text = "AGPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://git.sr.ht/~rogeruiz/scuttle"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
